--- a/src/frontend/src/param_config/setupConfig.json
+++ b/src/frontend/src/param_config/setupConfig.json
@@ -1,4 +1,9 @@
-{
+{   
+    "backend_port" : "http://crc2-jasper:8888/api",
+    "api_list": {
+        "find_forwarder_diff_all_hosp" : "/v1/find-forwarder-diff/all-hosp",
+        "find_forwarder_diff_selected_hosp" : "/v1/find-forwarder-diff/selected-hosp"
+    },
     "allClusters": [
         {
             "cluster": "HKEC",
